syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos";

package parstech;

import "google/protobuf/timestamp.proto";
import "Common.proto";

// CATALOG SERVICE DEFINITIONS

// Category Service for category management
service CategoryService {
  // Category operations
  rpc GetCategories (GetCategoriesRequest) returns (CategoriesResponse);
  rpc GetCategory (GetCategoryRequest) returns (CategoryResponse);
  rpc GetCategoryTree (GetCategoryTreeRequest) returns (CategoryTreeResponse);
  rpc GetCategoryPath (GetCategoryPathRequest) returns (CategoryPathResponse);
  rpc GetCategoryProducts (GetCategoryProductsRequest) returns (CategoryProductsResponse);
  rpc GetCategoryFilters (GetCategoryFiltersRequest) returns (CategoryFiltersResponse);
  rpc GetFeaturedCategories (GetFeaturedCategoriesRequest) returns (FeaturedCategoriesResponse);
}

// Brand Service for brand management
service BrandService {
  // Brand operations
  rpc GetBrands (GetBrandsRequest) returns (BrandsResponse);
  rpc GetBrand (GetBrandRequest) returns (BrandResponse);
  rpc GetBrandsByCategory (GetBrandsByCategoryRequest) returns (BrandsByCategoryResponse);
  rpc GetBrandProducts (GetBrandProductsRequest) returns (BrandProductsResponse);
  rpc GetFeaturedBrands (GetFeaturedBrandsRequest) returns (FeaturedBrandsResponse);
}

// Property Service for product properties
service PropertyService {
  // Property operations
  rpc GetProperties (GetPropertiesRequest) returns (PropertiesResponse);
  rpc GetProperty (GetPropertyRequest) returns (PropertyResponse);
  rpc GetPropertiesByCategory (GetPropertiesByCategoryRequest) returns (PropertiesByCategoryResponse);
  rpc GetPropertyValues (GetPropertyValuesRequest) returns (PropertyValuesResponse);
}

// Catalog Search Service for catalog search
service CatalogSearchService {
  // Search operations
  rpc Search (SearchCatalogRequest) returns (SearchCatalogResponse);
  rpc GetSearchSuggestions (GetSearchSuggestionsRequest) returns (SearchSuggestionsResponse);
  rpc GetPopularSearches (GetPopularSearchesRequest) returns (PopularSearchesResponse);
}
